drone-ci.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: devsecops
  labels:
    app: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      hostAliases:                     
        - ip: "10.43.62.129"
          hostnames:
            - "git.bootcamp.althunibat.xyz"
      containers:
        - name: drone
          image: drone/drone:2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: drone-data
              mountPath: /data
      volumes:
        - name: drone-data
          persistentVolumeClaim:
            claimName: drone-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: devsecops
spec:
  type: ClusterIP
  selector:
    app: drone
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-ingress
  namespace: devsecops
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer 
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx  
  tls:
    - hosts:
        - drone-ci.bootcamp.althunibat.xyz
      secretName: drone-ci-tls
  rules:
    - host: drone-ci.bootcamp.althunibat.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drone
                port:
                  number: 80
